package Protobuf;

message BigInt {
	required bytes data = 1;
}

message BigIntArray {
    repeated BigInt values = 1;
}

message BigIntMatrix {
    repeated BigIntArray lines = 1;
}

message BigIntMatrix_Collection {
    repeated BigIntMatrix matrices = 1;
}