package Protobuf;

message FHE_Context {
    required string content = 1;
}

message FHE_PK {
    required string content = 1;
}

message FHE_Ctxt {
    required string content = 1;
}