package Protobuf;

import "bigint.proto";

message SOCKET_READY_Message {
}

message LSIC_A_Message {
    required uint32 index = 1;
    required BigInt tau = 2;
}

message LSIC_B_Message {
    required uint32 index = 1;
    required BigInt tb = 2;
    required BigInt bi = 3;
}

message Enc_Compare_Setup_Message {
    optional uint32 bit_length = 1;
    required BigInt c_z = 2;
}